--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -272,6 +272,24 @@
     width: 1920px;
   }
 
+  .formulario {
+    margin: 20px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .formulario .mat-form-field + .mat-form-field {
+    margin-left: 8px;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
+  .botao-salvar{
+    margin-left: 5px;
+  }
+
   /* Responsive Styles */
   @media screen and (max-width: 767px) {
     .card-container > *:not(.circle-link) ,
@@ -342,33 +360,46 @@
   <h2>Pessoas</h2>
   <p>Aqui vamos gerenciar a entidade pessoa!</p>
 
+  <form class="formulario" *ngIf="mostrarFormulario">
+    <mat-form-field class="example-form-field" appearance="fill">
+      <mat-label>ID</mat-label>
+      <input matInput type="text" [(ngModel)]="pessoa.id" name="id">
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Nome</mat-label>
+      <input matInput type="text" [(ngModel)]="pessoa.nome" name="nome">
+    </mat-form-field>
+
+    <button mat-fab class="botao-salvar">
+      <mat-icon>save</mat-icon>
+    </button>
+  </form>
+
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
   
     <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id</th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="nome">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
     </ng-container>
   
     <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    <ng-container matColumnDef="acoes">
+      <th mat-header-cell *matHeaderCellDef> Ações </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary">Editar</button>
+        <button mat-raised-button color="accent" (click)="delete(element.id)">Excluir</button>
+      </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
