--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -371,7 +371,7 @@
       <input matInput type="text" [(ngModel)]="pessoa.nome" name="nome">
     </mat-form-field>
 
-    <button mat-fab class="botao-salvar">
+    <button mat-fab class="botao-salvar" (click)="salvar()">
       <mat-icon>save</mat-icon>
     </button>
   </form>
@@ -397,7 +397,7 @@
     <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef> Ações </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary">Editar</button>
+        <button mat-raised-button color="primary" (click)="editar(element)">Editar</button>
         <button mat-raised-button color="accent" (click)="delete(element.id)">Excluir</button>
       </td>
     </ng-container>
